welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: ';' expected but 'if' found.
} if(litMessage()== "L"){
  ^