welcome.lessons.welcome.bdr.BDR.scala.code
var fini = false
while (fini == true){
	if (litMessage()== "R"){
		droite();avance();
		
} if(litMessage()== "L"){
	gauche();avance();
}if(litMessage()== "I"){
	gauche();gauche();avance();
}if(litMessage()== "A"){
	avance();
}if(litMessage()== "B"){
	avance();avance();
}if(litMessage()== "C"){
	avance();avance();avance();
}if(litMessage()== "Z"){
	recule();
}if(litMessag()== "Y"){
	recule();recule();
}if(litMessage()== "X"){
	recule();recule();recule();
}
	
}
